now preventing scroll of main window on mobile

--- a/euro-app/src/app/styles/_material-common.scss
+++ b/euro-app/src/app/styles/_material-common.scss
@@ -15,6 +15,11 @@
 
     body { 
         display: grid;
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
     }
     
     * {
